concept of navigation
almost complete navigation concept (except for selected item-state and
other minor isues) needs to be reviewed

--- a/html-concept/index.html
+++ b/html-concept/index.html
@@ -1,24 +1,42 @@
 <! DOCTYPE html>
-	<html>
-		<head>
-			<title>bzn-concept</title>
-			<link rel="stylesheet" type="text/css" href="style/CSS/master.css">
-		</head>
-	<body>
+<html>
+<head>
+	<title>bzn-concept</title>
+	<link rel="stylesheet" type="text/css" href="style/CSS/master.css">
+</head>
+<body>
+	<nav>
+		<menu>
+			<li>Artikelen</li>
+			<li>Eigen verkoop</li>
+			<li>Controle</li>
+			<li>Proms</li>
+			<li class="submenu">Rogge</li>
+			<li class="submenu">De Vlaminck</li>
+			<li class="submenu">Pannecoucke</li>
+			<li class="submenu">Ducateeuw</li>
+			<li class="submenu">Van De Steene</li>
+			<li class="submenu">Delanghe</li>
+			<li class="submenu">Omey</li>
+			<li class="submenu">Fernande</li>
+			<li class="submenu">Baert (Kaster)</li>
+			<li class="submenu">Allaert - Vanden Driessche</li>
+		</menu>
+	</nav>
+	<section>
 		<nav>
 			<ul>
-				<li>artikelen</li>
-				<li>eigen verkoop</li>
-				<li>controle</li>
-				<li>proms
-					<ul>
-						<li>de vlaminck</li>
-						<li>rogge</li>
-						<li>pannecoucke</li>
-					</ul>
-				</li>
+				<li>Levering</li>
+				<li>Stock</li>
+				<li>Verkoop</li>
+				<li>Grote verkoop</li>
+				<li class="submenu">Kerk Zulte</li>
+				<li class="submenu">Flatjes</li>
+				<li class="submenu">Kerk Waregem</li>
+				<li class="submenu">Kerk Zulte</li>
+				<li>Kas</li>
 			</ul>
 		</nav>
-		<section></section>
-	</body>
-	</html>
+	</section>
+</body>
+</html>
