--- a/html-concept/index.html
+++ b/html-concept/index.html
@@ -3,14 +3,18 @@
 <head>
 	<title>bzn-concept</title>
 	<link rel="stylesheet" type="text/css" href="style/CSS/master.css">
+	<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+	<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script type="text/javascript" src="js/sidebar.js"></script>
 </head>
 <body>
 	<nav>
 		<menu>
-			<li>Artikelen</li>
-			<li>Eigen verkoop</li>
-			<li>Controle</li>
-			<li>Proms</li>
+			<li id="articles">Artikelen</li>
+			<li id="own_sales" class="selected">Eigen verkoop</li>
+			<li id="control_center">Controle</li>
+			<li id="sales_points">Proms</li>
 			<li class="submenu">Rogge</li>
 			<li class="submenu">De Vlaminck</li>
 			<li class="submenu">Pannecoucke</li>
@@ -24,7 +28,7 @@
 		</menu>
 	</nav>
 	<section>
-		<nav>
+		<nav id="secondmenu_own_sales" class="secondmenu">
 			<ul>
 				<li>Levering</li>
 				<li>Stock</li>
@@ -37,6 +41,52 @@
 				<li>Kas</li>
 			</ul>
 		</nav>
+		<div class="wrapper">
+			<div class=" actionbar_verkoop navbar">
+				<div class="navbar-inner">
+					<ul class="nav">
+						<li><a href="#">Geschiedenis</a></li>
+						<li  class="active"><a href="#">Nieuwe verkoop</a></li>
+					</ul>
+				</div>
+			</div>
+			<table class="table">
+				<thead>
+					<td>Artikelnummer</td>
+					<td>Artikelnaam</td>
+					<td>Prijs</td>
+					<td>Aantal</td>
+				</thead>
+				<tbody>
+					<tr>
+						<td>0001</td>
+						<td>Deurmat "weer of geen weer"</td>
+						<td>&euro;14,00</td>
+						<td>
+							<input type="number" placeholder="0"></td>
+						</td>
+					</tr>
+					<tr>
+						<td>0002</td>
+						<td>Gelukskaars</td>
+						<td>&euro;10,00</td>
+						<td><input type="number" placeholder="0"></td></td>
+					</tr>
+					<tr>
+						<td>0003</td>
+						<td>Servetten "Goeiemorgen"</td>
+						<td>&euro;4,00</td>
+						<td><input type="number" placeholder="0"></td></td>
+					</tr>
+					<tr>
+						<td>0004</td>
+						<td>Origamiservetten "Pluk de dag"</td>
+						<td>&euro;5,50</td>
+						<td><input type="number" placeholder="0"></td></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</section>
 </body>
 </html>
