--- a/html-concept 2/index.html
+++ b/html-concept 2/index.html
@@ -4,14 +4,35 @@
 	<title>bzn-concept</title>
 	<!--frameworks-->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 	
 	<link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.min.css">
 
 	
 	<script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
+	
 	<!--custom-->
 	<link rel="stylesheet" type="text/css" href="style/CSS/master.css">
-	<script type="text/javascript" src="js/tableselect.js"></script>
+	<script type="text/javascript" src="js/activate.js"></script>
+	<script type="text/javascript" src="js/artikelen.js"></script>
+	<script type="text/javascript" src="js/prompage.js"></script>
+
+	<script type="text/javascript" src="js/gui/layout.js"></script>
+
+	<script type="text/javascript" src="js/core/link.js"></script>
+	<script type="text/javascript" src="js/core/product.js"></script>
+	<script type="text/javascript" src="js/core/dialog.js"></script>
+	<script type="text/javascript" src="js/core/table.js"></script>
+	<script type="text/javascript" src="js/core/tablerow.js"></script>
+	<script type="text/javascript" src="js/core/tabledata.js"></script>
+	<script type="text/javascript" src="js/core/tableselect.js"></script>
+	<script type="text/javascript" src="js/core/htmltag.js"></script>
+	<script type="text/javascript" src="js/core/prom.js"></script>
+
+	<script type="text/javascript" src="js/db/storage.js"></script>
+	<script type="text/javascript" src="js/db/productenDb.js"></script>
+	<script type="text/javascript" src="js/db/promDb.js"></script>
+
 </head>
 <body>
 	<header></header>
@@ -20,43 +41,31 @@
 			<ul class="nav nav-tabs nav-justified" id="myTab">
 				<li><a href="#algemeen" data-toggle="tab">Algemeen</a></li>
 				<li class="active"><a href="#verkoop" data-toggle="tab">Verkoop</a></li>
-				<li><a href="#proms" data-toggle="tab">Proms</a></li>
+				<li id="prom-tab"><a href="#proms" data-toggle="tab">Proms</a></li>
 			</ul>
 
 			<div class="tab-content">
 				<div class="tab-pane" id="algemeen">
 					<ul id="tab1">
-						<li class="btn btn-default btn-block" id="articles">Artikelen</li>
-						<li class="btn btn-default btn-block" id="control_center">Controle</li>
+						<li class="btn btn-default btn-block" id="articles"><a href="#">Artikelen</a></li>
+						<li class="btn btn-default btn-block" id="control_center"><a href="#">Controle</a></li>
 					</ul>
 				</div>
 				<div class="tab-pane active" id="verkoop">
 					<ul id="tab2">
-						<li class="btn btn-default btn-block">Levering</li>
-						<li class="btn btn-default btn-block">Stock</li>
-						<li class="btn btn-default btn-block">Verkoop</li>
-						<li class="btn btn-primary btn-block"> Grote Verkoop
-							<ul >
-								<li class="btn btn-default btn-block">Bib Zulte</li>
-								<li class="btn btn-default btn-block">Kerk Zulte</li>
+						<li class="btn btn-default btn-block" id="verkoop_levering"><a href="#">Levering</a></li>
+						<li class="btn btn-primary btn-block" id="verkoop_stock"><a href="verkoop_stock.html">Stock</a></li>
+						<li class="btn btn-default btn-block" id="verkoop_verkoop"><a href="verkoop_verkoop.html">Verkoop</a></li>
+						<li class="btn btn-default btn-block" id="verkoop_groteverkoop"><a href="verkoop_groteverkoop.html">Grote Verkoop</a>
+							<ul>
+								<li class="btn btn-default btn-block" class="verkoop_groot"><a href="verkoop_groot.html">Bib Zulte</a></li>
+								<li class="btn btn-default btn-block" class="verkoop_groot"><a href="verkoop_groot.html">Kerk Zulte</a></li>
 							</ul>
 						</li>
-						<li class="btn btn-default btn-block">Kas</li>
+						<li class="btn btn-default btn-block" id="verkoop_kas"><a href="verkoop_kas">Kas</a></li>
 					</ul>
 				</div>
 				<div class="tab-pane" id="proms">
-					<ul id="tab3">
-						<li class="btn btn-default btn-block">Rogge</li>
-						<li class="btn btn-default btn-block">De Vlaminck</li>
-						<li class="btn btn-default btn-block">Pannecoucke</li>
-						<li class="btn btn-default btn-block">Ducateeuw</li>
-						<li class="btn btn-default btn-block">Van De Steene</li>
-						<li class="btn btn-default btn-block">Delanghe</li>
-						<li class="btn btn-default btn-block">Omey</li>
-						<li class="btn btn-default btn-block">Fernande</li>
-						<li class="btn btn-default btn-block">Baert (Kaster)</li>
-						<li class="btn btn-default btn-block">Allaert - Vanden Driessche</li>
-					</ul>
 				</div>
 			</div>
 			<menu>
@@ -64,142 +73,24 @@
 			</menu>
 		</nav>
 		<section>
-			<div class="navbar navbar-static-top">
-				<ul class="nav navbar-nav">
-					<li><a href="#">Geschiedenis</a></li>
-					<li  class="active"><a href="#">Nieuwe verkoop</a></li>
-				</ul>
-			</div>
-			<div class="view">
-			<table class="table table-hover"><!--table-striped-->
-
-				<thead>
-					<td>Artikelnummer</td>
-					<td>Artikelnaam</td>
-					<td>Prijs</td>
-					<td>Aantal</td>
-				</thead>
-				<tbody>
-					<tr class="selectablerow">
-						<td>0001</td>
-						<td>Deurmat "weer of geen weer"</td>
-						<td>&euro;14,00</td>
-						<td>
-							<input type="number" placeholder="0" min="0"></td>
-						</td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0002</td>
-						<td>Gelukskaars</td>
-						<td>&euro;10,00</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0003</td>
-						<td>Servetten "Goeiemorgen"</td>
-						<td>&euro;4,00</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0004</td>
-						<td>Origamiservetten "Pluk de dag"</td>
-						<td>&euro;5,50</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0005</td>
-						<td>Zakdoekjes "Opkikkertje"</td>
-						<td>&euro;2,50</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0006</td>
-						<td>Wenslicht</td>
-						<td>&euro;6,00</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0007</td>
-						<td>Gedachtenlichte</td>
-						<td>&euro;5,50</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0008</td>
-						<td>Zonnige zakdoejesdoos</td>
-						<td>&euro;4,00</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0009</td>
-						<td>Knuffellichtje</td>
-						<td>&euro;4,50</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0010</td>
-						<td>BZN kalender 2014</td>
-						<td>&euro;10,00</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0011</td>
-						<td>Soepkom</td>
-						<td>&euro;8,50</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0013</td>
-						<td>Wensbal</td>
-						<td>&euro;6,00</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0131</td>
-						<td>Wonderlicht</td>
-						<td>&euro;8,00</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0132</td>
-						<td>Kaarsentrio</td>
-						<td>&euro;15,00</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0134</td>
-						<td>Voor jou kaars</td>
-						<td>&euro;7,50</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0331</td>
-						<td>4 rode cilinderkaarsen</td>
-						<td>&euro;6,00</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0813</td>
-						<td>Tafelkaarsen wit</td>
-						<td>&euro;3,50</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0814</td>
-						<td>Tafelkaarsen Geel</td>
-						<td>&euro;3,50</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-					<tr class="selectablerow">
-						<td>0821</td>
-						<td>Tafelkaarsen rood</td>
-						<td>&euro;3,50</td>
-						<td><input type="number" placeholder="0" min="0"></td>
-					</tr>
-				</tbody>
-			</table>
-			</div>
 		</section>
 	</div>
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+					<h4 class="modal-title"></h4>
+				</div>
+				<div class="modal-body">
+				<p class="modal-text"></p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default cancel"></button>
+					<button type="button" class="btn btn-primary save"></button>
+				</div>
+			</div><!-- /.modal-content -->
+		</div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
 </body>
 </html>
