--- a/BZN-ember/app/index.html
+++ b/BZN-ember/app/index.html
@@ -7,17 +7,20 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script>
-      window.ENV = {{ENV}};
-      document.write('<base href="' + document.location.origin + ENV.rootURL + '" />');
-    </script>
+    {{BASE_TAG}}
 
-    <link rel="stylesheet" href="assets/app.css">
-    <script src="assets/app.js"></script>
+    <link rel="stylesheet" href="assets/vendor.css">
+    <link rel="stylesheet" href="assets/bzn-ember.css">
   </head>
   <body>
     <script>
-      window.BZNEmber = require('bzn-ember/main')['default']('bzn-ember');
+      window.BZNEmberENV = {{ENV}};
+      window.EmberENV = window.BZNEmberENV.EmberENV;
+    </script>
+    <script src="assets/vendor.js"></script>
+    <script src="assets/bzn-ember.js"></script>
+    <script>
+      window.BZNEmber = require('bzn-ember/app')['default'].create(BZNEmberENV.APP);
     </script>
   </body>
 </html>
