--- a/BZN-ember/tests/index.html
+++ b/BZN-ember/tests/index.html
@@ -7,17 +7,11 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script>
-      ENV = {{ENV}};
-      document.write('<base href="' + document.location.origin + ENV.rootURL + '" />');
-    </script>
+    {{BASE_TAG}}
 
-    <link rel="stylesheet" href="assets/app.css">
+    <link rel="stylesheet" href="assets/vendor.css">
+    <link rel="stylesheet" href="assets/bzn-ember.css">
     <link rel="stylesheet" href="assets/qunit.css">
-
-    <script src="assets/app.js"></script>
-    <script src="assets/tests.js"></script>
-
     <style>
       #ember-testing-container {
         position: absolute;
@@ -38,9 +32,19 @@
   <body>
     <div id="qunit"></div>
     <div id="qunit-fixture"></div>
+
+    <script>
+      window.BZNEmberENV = {{ENV}};
+      window.EmberENV = window.BZNEmberENV.EmberENV;
+    </script>
+    <script src="assets/qunit.js"></script>
+    <script src="assets/qunit-notifications.js"></script>
+    <script src="assets/vendor.js"></script>
+    <script src="assets/bzn-ember.js"></script>
+    <script src="testem.js"></script>
     <script>
       require('bzn-ember/tests/test-helper');
-      require('bzn-ember/tests/test-loader');
     </script>
+    <script src="assets/test-loader.js"></script>
   </body>
 </html>
