--- a/html-concept 2/verkoop_stock.html
+++ b/html-concept 2/verkoop_stock.html
@@ -1,210 +1,210 @@
 <! DOCTYPE html>
 <html>
-<head>
-	<title>bzn-concept</title>
-	<!--frameworks-->
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-	
-	<link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.min.css">
+  <head>
+    <title>bzn-concept</title>
+    <!--frameworks-->
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 
-	
-	<script type="text/javascript" src="bootstrap/dist/js/bootstrap.min.js"></script>
-	<!--custom-->
-	<link rel="stylesheet" type="text/css" href="style/CSS/master.css">
-	<script type="text/javascript" src="js/tableselect.js"></script>
-</head>
-<body>
-	<header></header>
-	<div class="content">
-		<nav>
-			<ul class="nav nav-tabs nav-justified" id="myTab">
-				<li><a href="#algemeen" data-toggle="tab">Algemeen</a></li>
-				<li class="active"><a href="#verkoop" data-toggle="tab">Verkoop</a></li>
-				<li><a href="#proms" data-toggle="tab">Proms</a></li>
-			</ul>
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"
+    rel="stylesheet">
 
-			<div class="tab-content">
-				<div class="tab-pane" id="algemeen">
-					<ul id="tab1">
-						<li class="btn btn-default btn-block" id="articles"><a href="artikelen.html">Artikelen</a></li>
-						<li class="btn btn-default btn-block" id="control_center"><a href="controle.html">Controle</a></li>
-					</ul>
-				</div>
-				<div class="tab-pane active" id="verkoop">
-					<ul id="tab2">
-						<li class="btn btn-default btn-block"><a href="verkoop_levering.html">Levering</a></li>
-						<li class="btn btn-primary btn-block"><a href="verkoop_stock.html">Stock</a></li>
-						<li class="btn btn-default btn-block"><a href="verkoop_verkoop.html">Verkoop</a></li>
-						<li class="btn btn-default btn-block"><a href="verkoop_groteverkoop.html">Grote Verkoop</a>
-							<ul>
-								<li class="btn btn-default btn-block"><a href="verkoop_groot.html">Bib Zulte</a></li>
-								<li class="btn btn-default btn-block"><a href="verkoop_groot.html">Kerk Zulte</a></li>
-							</ul>
-						</li>
-						<li class="btn btn-default btn-block"><a href="verkoop_kas">Kas</a></li>
-					</ul>
-				</div>
-				<div class="tab-pane" id="proms">
-					<ul id="tab3">
-						<li class="btn btn-default btn-block"><a href="prom.html">Rogge</a></li>
-						<li class="btn btn-default btn-block"><a href="prom.html">De Vlaminck</a></li>
-						<li class="btn btn-default btn-block"><a href="prom.html">Pannecoucke</a></li>
-						<li class="btn btn-default btn-block"><a href="prom.html">Ducateeuw</a>
-							<ul>
-								<li class="btn btn-default btn-block hidden"><a href="prom_stock.html">Stock</li>
-								<li class="btn btn-default btn-block hidden"><a href="prom_transfers.html">Transfers</li>
-								<li class="btn btn-default btn-block hidden"><a href="prom_verkoop.html">Verkoop</li>
-								<li class="btn btn-default btn-block hidden"><a href="prom_kas.html">Kas</li>
-							</ul>
-						</li>
-						<li class="btn btn-default btn-block"><a href="prom.html">Van De Steene</a></li>
-						<li class="btn btn-default btn-block"><a href="prom.html">Delanghe</a></li>
-						<li class="btn btn-default btn-block"><a href="prom.html">Omey</a></li>
-						<li class="btn btn-default btn-block"><a href="prom.html">Fernande</a></li>
-						<li class="btn btn-default btn-block"><a href="prom.html">Baert (Kaster)</a></li>
-						<li class="btn btn-default btn-block"><a href="prom.html">Allaert - Vanden Driessche</a></li>
-					</ul>
-				</div>
-			</div>
-			<menu>
-				
-			</menu>
-		</nav>
-		<section>
-			<div class="actionbar">
-				
-			</div>
-			
-			<div class="view">
-				<table class="table table-hover"><!--table-striped-->
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <!--custom-->
+    <link rel="stylesheet" type="text/css" href="style/CSS/master.css">
+    <script type="text/javascript" src="js/tableselect.js"></script>
+  </head>
+  <body>
+    <header></header>
+    <div class="content">
+      <nav>
+        <ul class="nav nav-tabs nav-justified" id="myTab">
+          <li><a href="#algemeen" data-toggle="tab">Algemeen</a></li>
+          <li class="active"><a href="#verkoop" data-toggle="tab">Verkoop</a></li>
+          <li><a href="#proms" data-toggle="tab">Proms</a></li>
+        </ul>
 
-					<thead>
-						<td>Artikelnummer</td>
-						<td>Artikelnaam</td>
-						<td>Prijs</td>
-						<td>Aantal</td>
-					</thead>
-					<tbody>
-						<tr class="selectablerow">
-							<td>0001</td>
-							<td>Deurmat "weer of geen weer"</td>
-							<td>&euro;14,00</td>
-							<td>
-							</td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0002</td>
-							<td>Gelukskaars</td>
-							<td>&euro;10,00</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0003</td>
-							<td>Servetten "Goeiemorgen"</td>
-							<td>&euro;4,00</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0004</td>
-							<td>Origamiservetten "Pluk de dag"</td>
-							<td>&euro;5,50</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0005</td>
-							<td>Zakdoekjes "Opkikkertje"</td>
-							<td>&euro;2,50</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0006</td>
-							<td>Wenslicht</td>
-							<td>&euro;6,00</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0007</td>
-							<td>Gedachtenlichte</td>
-							<td>&euro;5,50</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0008</td>
-							<td>Zonnige zakdoejesdoos</td>
-							<td>&euro;4,00</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0009</td>
-							<td>Knuffellichtje</td>
-							<td>&euro;4,50</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0010</td>
-							<td>BZN kalender 2014</td>
-							<td>&euro;10,00</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0011</td>
-							<td>Soepkom</td>
-							<td>&euro;8,50</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0013</td>
-							<td>Wensbal</td>
-							<td>&euro;6,00</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0131</td>
-							<td>Wonderlicht</td>
-							<td>&euro;8,00</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0132</td>
-							<td>Kaarsentrio</td>
-							<td>&euro;15,00</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0134</td>
-							<td>Voor jou kaars</td>
-							<td>&euro;7,50</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0331</td>
-							<td>4 rode cilinderkaarsen</td>
-							<td>&euro;6,00</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0813</td>
-							<td>Tafelkaarsen wit</td>
-							<td>&euro;3,50</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0814</td>
-							<td>Tafelkaarsen Geel</td>
-							<td>&euro;3,50</td>
-							<td></td>
-						</tr>
-						<tr class="selectablerow">
-							<td>0821</td>
-							<td>Tafelkaarsen rood</td>
-							<td>&euro;3,50</td>
-							<td></td>
-						</tr>
-					</tbody>
-				</table>
-			</div>
-		</section>
-	</div>
-</body>
-</html>
+        <div class="tab-content">
+          <div class="tab-pane" id="algemeen">
+            <ul id="tab1">
+              <li class="btn btn-default btn-block" id="articles"><a href="artikelen.html">Artikelen</a></li>
+              <li class="btn btn-default btn-block" id="control_center"><a href="controle.html">Controle</a></li>
+            </ul>
+          </div>
+          <div class="tab-pane active" id="verkoop">
+            <ul id="tab2">
+              <li class="btn btn-default btn-block"><a href="verkoop_levering.html">Levering</a></li>
+              <li class="btn btn-primary btn-block"><a href="verkoop_stock.html">Stock</a></li>
+              <li class="btn btn-default btn-block"><a href="verkoop_verkoop.html">Verkoop</a></li>
+              <li class="btn btn-default btn-block"><a href="verkoop_groteverkoop.html">Grote Verkoop</a>
+                <ul>
+                  <li class="btn btn-default btn-block"><a href="verkoop_groot.html">Bib Zulte</a></li>
+                  <li class="btn btn-default btn-block"><a href="verkoop_groot.html">Kerk Zulte</a></li>
+                </ul>
+              </li>
+              <li class="btn btn-default btn-block"><a href="verkoop_kas">Kas</a></li>
+            </ul>
+          </div>
+          <div class="tab-pane" id="proms">
+            <ul id="tab3">
+              <li class="btn btn-default btn-block"><a href="prom.html">Rogge</a></li>
+              <li class="btn btn-default btn-block"><a href="prom.html">De Vlaminck</a></li>
+              <li class="btn btn-default btn-block"><a href="prom.html">Pannecoucke</a></li>
+              <li class="btn btn-default btn-block"><a href="prom.html">Ducateeuw</a>
+                <ul>
+                  <li class="btn btn-default btn-block hidden"><a href="prom_stock.html">Stock</li>
+                    <li class="btn btn-default btn-block hidden"><a href="prom_transfers.html">Transfers</li>
+                      <li class="btn btn-default btn-block hidden"><a href="prom_verkoop.html">Verkoop</li>
+                        <li class="btn btn-default btn-block hidden"><a href="prom_kas.html">Kas</li>
+                        </ul>
+                      </li>
+                      <li class="btn btn-default btn-block"><a href="prom.html">Van De Steene</a></li>
+                      <li class="btn btn-default btn-block"><a href="prom.html">Delanghe</a></li>
+                      <li class="btn btn-default btn-block"><a href="prom.html">Omey</a></li>
+                      <li class="btn btn-default btn-block"><a href="prom.html">Fernande</a></li>
+                      <li class="btn btn-default btn-block"><a href="prom.html">Baert (Kaster)</a></li>
+                      <li class="btn btn-default btn-block"><a href="prom.html">Allaert - Vanden Driessche</a></li>
+                    </ul>
+                  </div>
+                </div>
+                <menu>
+
+                </menu>
+              </nav>
+              <section>
+                <div class="actionbar">
+
+                </div>
+
+                <div class="view">
+                  <table class="table table-hover"><!--table-striped-->
+
+                    <thead>
+                      <td>Artikelnummer</td>
+                      <td>Artikelnaam</td>
+                      <td>Prijs</td>
+                      <td>Aantal</td>
+                    </thead>
+                    <tbody>
+                      <tr class="selectablerow">
+                        <td>0001</td>
+                        <td>Deurmat "weer of geen weer"</td>
+                        <td>&euro;14,00</td>
+                        <td>
+                        </td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0002</td>
+                        <td>Gelukskaars</td>
+                        <td>&euro;10,00</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0003</td>
+                        <td>Servetten "Goeiemorgen"</td>
+                        <td>&euro;4,00</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0004</td>
+                        <td>Origamiservetten "Pluk de dag"</td>
+                        <td>&euro;5,50</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0005</td>
+                        <td>Zakdoekjes "Opkikkertje"</td>
+                        <td>&euro;2,50</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0006</td>
+                        <td>Wenslicht</td>
+                        <td>&euro;6,00</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0007</td>
+                        <td>Gedachtenlichte</td>
+                        <td>&euro;5,50</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0008</td>
+                        <td>Zonnige zakdoejesdoos</td>
+                        <td>&euro;4,00</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0009</td>
+                        <td>Knuffellichtje</td>
+                        <td>&euro;4,50</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0010</td>
+                        <td>BZN kalender 2014</td>
+                        <td>&euro;10,00</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0011</td>
+                        <td>Soepkom</td>
+                        <td>&euro;8,50</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0013</td>
+                        <td>Wensbal</td>
+                        <td>&euro;6,00</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0131</td>
+                        <td>Wonderlicht</td>
+                        <td>&euro;8,00</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0132</td>
+                        <td>Kaarsentrio</td>
+                        <td>&euro;15,00</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0134</td>
+                        <td>Voor jou kaars</td>
+                        <td>&euro;7,50</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0331</td>
+                        <td>4 rode cilinderkaarsen</td>
+                        <td>&euro;6,00</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0813</td>
+                        <td>Tafelkaarsen wit</td>
+                        <td>&euro;3,50</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0814</td>
+                        <td>Tafelkaarsen Geel</td>
+                        <td>&euro;3,50</td>
+                        <td></td>
+                      </tr>
+                      <tr class="selectablerow">
+                        <td>0821</td>
+                        <td>Tafelkaarsen rood</td>
+                        <td>&euro;3,50</td>
+                        <td></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </section>
+            </div>
+          </body>
+        </html>
