--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <base href="/" />
+    <base href="/BZN/" />
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/bzn-ember.css">
