Update ember-cli to v0.0.44

--- a/BZN-ember/app/index.html
+++ b/BZN-ember/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>BZNEmber</title>
+    <title>BznEmber</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,13 +14,13 @@
   </head>
   <body>
     <script>
-      window.BZNEmberENV = {{ENV}};
-      window.EmberENV = window.BZNEmberENV.EmberENV;
+      window.BznEmberENV = {{ENV}};
+      window.EmberENV = window.BznEmberENV.EmberENV;
     </script>
     <script src="assets/vendor.js"></script>
     <script src="assets/bzn-ember.js"></script>
     <script>
-      window.BZNEmber = require('bzn-ember/app')['default'].create(BZNEmberENV.APP);
+      window.BznEmber = require('bzn-ember/app')['default'].create(BznEmberENV.APP);
     </script>
   </body>
 </html>
