--- a/BZN-ember/tests/index.html
+++ b/BZN-ember/tests/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>BZNEmber Tests</title>
+    <title>BznEmber Tests</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/bzn-ember.css">
-    <link rel="stylesheet" href="assets/qunit.css">
+    <link rel="stylesheet" href="assets/test-support.css">
     <style>
       #ember-testing-container {
         position: absolute;
@@ -34,12 +34,11 @@
     <div id="qunit-fixture"></div>
 
     <script>
-      window.BZNEmberENV = {{ENV}};
-      window.EmberENV = window.BZNEmberENV.EmberENV;
+      window.BznEmberENV = {{ENV}};
+      window.EmberENV = window.BznEmberENV.EmberENV;
     </script>
-    <script src="assets/qunit.js"></script>
-    <script src="assets/qunit-notifications.js"></script>
     <script src="assets/vendor.js"></script>
+    <script src="assets/test-support.js"></script>
     <script src="assets/bzn-ember.js"></script>
     <script src="testem.js"></script>
     <script>
